# kafka-rust-clone-proto

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/incoming/: kafka_protocol_parser.rs  mod.rs  tcp_adapter.rs
src/adapters/incoming/protocol/: README.md  constants.rs  mod.rs
src/adapters/incoming/protocol/dto/: request.rs
src/adapters/incoming/protocol/messages/: common.rs  mod.rs  response.rs
src/adapters/outgoing/: README.md  disk_store.rs  kraft_metadata_store.rs  memory_store.rs  mod.rs
src/adapters/outgoing/protocol/: kraft_record.rs  mod.rs
src/adapters/protocol/: constants.rs  kraft_record_parser.rs  mod.rs  tcp_parser.rs
src/adapters/protocol/dto/: common.rs  kraft.rs  mod.rs  request.rs  response.rs
src/adapters/protocol/parser/: base_parser.rs  kraft_record_parser.rs  mod.rs  request_parser.rs  response_encoder.rs  tcp_parser.rs  traits.rs  varint.rs
src/application/: broker.rs  broker_service.rs  error.rs  mod.rs
src/config/: app_config.rs  mod.rs  test.rs  test_config.rs
src/domain/: error.rs  message.rs  mod.rs  topic.rs
src/ports/incoming/: broker_incoming_port.rs  message_handler.rs  mod.rs
src/ports/outgoing/: message_outgoing_port.rs  message_store.rs  metadata_outgoing_port.rs  metadata_store.rs  mod.rs
tests/: integration_test.rs
